server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canteen-service
  namespace: ge64zoh-devops25
spec:
  selector:
    app: canteen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
